# udemy-proj-tilemap-editor

./: LICENSE  README.md
clion-build/2DGameEngineCLion/: CMakeLists.txt  saved_example.map  todo.txt
clion-build/2DGameEngineCLion/assets/scripts/: Level1.lua  TilemapEditor.lua
clion-build/2DGameEngineCLion/src/: Animation.h  Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Collision.cpp  Collision.h  Component.h  Constants.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  FontManager.cpp  FontManager.h  Game.cpp  Game.h  Main.cpp  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h
clion-build/2DGameEngineCLion/src/Components/: ColliderComponent.h  KeyboardControlComponent.h  ProjectileEmitterComponent.h  SpriteComponent.h  TextLabelComponent.h  TileComponent.h  TransformComponent.h
